# VkMirror

./: .gitignore  README.md  build.gradle  build.gradle.kts  deploy.sh  settings.gradle  settings.gradle.kts
src/main/java/ru/darkkeks/vkmirror/: Chat.java  Chat.kt  ChatDao.java  Config.java  Main.java  Main.kt  MainMain.java  MessageIdLink.kt  NativeUtils.java  SyncedMessage.kt  TestMain.java  VkMirror.java  VkMirror.kt  VkMirrorChat.java  VkMirrorDao.java  VkMirrorDao.kt  VkMirrorLongPoll.java  VkMirrorModule.java  VkMirrorTelegram.java
src/main/java/ru/darkkeks/vkmirror/autoreg/: AutoRegClient.java  BotAutoReg.java  BotDao.java  BotDataManager.java  BotFatherAction.java  BotFatherTimeoutException.java  BotManager.java  RegisterAction.java  SetDescriptionAction.java  SetNameAction.java  VkMirrorBot.java
src/main/java/ru/darkkeks/vkmirror/bot/: BotAutoReg.kt  BotFatherAction.kt  BotFatherTimeoutException.kt  MirrorBot.kt  RegisterAction.kt  SetAboutAction.kt  SetDescriptionAction.kt  SetNameAction.kt  Util.kt
src/main/java/ru/darkkeks/vkmirror/tdlib/: AuthHandler.java  AuthHandler.kt  Client.java  Log.java  OrderedChat.java  TdApi.java  TelegramClient.java  TelegramClient.kt  TelegramCredentials.java  TelegramCredentials.kt  TelegramException.kt
src/main/java/ru/darkkeks/vkmirror/util/: EventHandler.kt  NativeUtils.java  Util.kt
src/main/java/ru/darkkeks/vkmirror/vk/: ChatType.java  ChatType.kt  GetUserLongPollEventsQuery.java  GetUserLongPollEventsQuery.kt  (+14 more)
src/main/jni/: CMakeLists.txt  build.sh  td_jni.cpp  update_tdlib.sh
src/main/resources/: log4j2.xml
(+9 files in other folders)
